--- a/theme.ini
+++ b/theme.ini
@@ -3,8 +3,8 @@
 ;;;;;;;
 [theme]
 author = "Roy Rosenzweig Center for History and New Media"
-title = "Berlin"
-description = "Abstraction of the Making the History of 1989 theme."
+title = "Libscribe"
+description = "A variation of the Berlin theme."
 license = "GPLv3"
 website = "http://omeka.org"
 support_link = "http://omeka.org/forums/forum/themes-and-public-display"
